--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -1,8 +1,8 @@
 .product {
   width: 19vw;
-  height: 45vh;
+  height: 38vh;
   min-width: 180px;
-  min-height: 45vh;
+  min-height: 200px;
   background-color: var(--background-white);
   margin: 15px;
   position: relative;
@@ -16,7 +16,7 @@
 
 .product__image {
   width: 100%;
-  height: 60%;
+  height: 70%;
   object-fit: cover;
   position: relative;
   overflow: hidden;
@@ -27,7 +27,12 @@
   width: 100%;
 }
 
-.product__header > p {
+.product__rating {
+  display: flex;
+  width: 50%;
+}
+
+.product__rating > p {
   font-size: x-small;
   margin: 5px 3px !important;
 }
@@ -35,6 +40,7 @@
 .product__name {
   display: flex;
   flex-grow: 1;
+  justify-content: center;
   flex-wrap: wrap;
   margin: 0px 3px;
 }
@@ -64,58 +70,25 @@
 .product__prices {
   display: flex;
   width: 50%;
-  justify-content: left;
+  justify-content: space-evenly;
   font-size: 0.7em;
   margin: 0px 3px;
 }
 
-.product__prices > p {
-  margin: 0px 3px;
-  display: grid;
-  place-items: end;
-}
-
 .product__original-price {
   text-decoration: line-through;
+  color: red;
+  margin-top: 4px;
 }
 
 .product__offer-price {
-  font-size: 1.2em;
+  font-size: 1.5em;
 }
 
 .product__original-price::before,
 .product__offer-price::before {
-  content: "Rs. ";
-}
-
-.product__actions {
-  bottom: 0px;
-  position: absolute;
-  display: flex;
-  width: 100%;
-  height: 35px;
-}
-
-.product__actions > button {
-  width: 50%;
-  border: none;
-  outline-width: 0;
-}
-
-.product__add-to-cart {
-  background-color: rgba(196, 155, 81, 0.836);
-}
-
-.product__add-to-cart:hover {
-  background-color: rgba(243, 189, 89, 0.836);
-}
-
-.product__buy-now {
-  background-color: rgba(95, 170, 95, 0.815);
-}
-
-.product__buy-now:hover {
-  background-color: rgba(91, 214, 91, 0.815);
+  content: "₹ ";
+  font-family: initial;
 }
 
 .product__quantity {
